AC_INIT(configure.in)

AM_INIT_AUTOMAKE(zcalib, 1.00)

AM_DISABLE_STATIC
AC_PROG_LIBTOOL
AC_PROG_CXX([CC g++])

if test $ac_cv_prog_gcc = yes; then
  CXXFLAGS="$CXXFLAGS -Wall"
fi

ROOTLIBS=`root-config --libs`
AC_SUBST(ROOTLIBS)

ROOTGLIBS=`root-config --glibs`
AC_SUBST(ROOTGLIBS)

AC_OUTPUT(Makefile)
